test/expected/explain_c-c.out
explain class C x
        ^
9: error: "class": unsupported type in C
